Atenção: Teste não-funcional atualmete. Funcionalidades: Adição de página e funcionalidades para gerenciamento de pacientes - Criada a página pacientes.html para gerenciamento de perfis de pacientes com barra lateral e área de conteúdo principal. - Implementado o arquivo painel.html para o painel de controle com fichas de pacientes e ações. - Adicionado o arquivo perfil.html para configurações de perfil do usuário com dados pessoais e preferências. - Desenvolvido o arquivo register.html para cadastro de usuários com validação de formulário. - Introduzido o arquivo relatorio.html para geração e visualização de relatórios. - Adicionados estilos CSS para as páginas de login, cadastro e perfil. - Implementado JavaScript para lidar com o cadastro e interações com a API. - Criada uma configuração global de API para o Axios gerenciar requisições.

--- a/FRONT-END/pages/cadastroIdoso/cadastroIdoso.html
+++ b/FRONT-END/pages/cadastroIdoso/cadastroIdoso.html
@@ -6,10 +6,10 @@
     <title>Cadastro de Idoso</title>
 
     <!-- CSS GLOBAL DO PAINEL -->
-    <link rel="stylesheet" href="../../css/global.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
 
     <!-- CSS ESPECÍFICO DO CADASTRO -->
-    <link rel="stylesheet" href="../../css/cadastroIdoso.css" />
+    <link rel="stylesheet" href="../../public/css/cadastroIdoso.css" />
   </head>
 
   <body>
