--- a/FRONT-END/pages/cuidadores/cuidadores.html
+++ b/FRONT-END/pages/cuidadores/cuidadores.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gerenciamento de Cuidadores</title>
 
-    <link rel="stylesheet" href="../../css/global.css" />
-    <link rel="stylesheet" href="../../css/cuidadores.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
+    <link rel="stylesheet" href="../../public/css/cuidadores.css" />
   </head>
   <body>
     
