--- a/FRONT-END/pages/idoso/idoso.html
+++ b/FRONT-END/pages/idoso/idoso.html
@@ -6,10 +6,10 @@
     <title>Perfil do Paciente</title>
 
     <!-- Importação do GLOBAL -->
-    <link rel="stylesheet" href="../../css/global.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
 
     <!-- CSS específico -->
-    <link rel="stylesheet" href="../../css/idoso.css" />
+    <link rel="stylesheet" href="../../public/css/idoso.css" />
   </head>
 
   <body>
