--- a/FRONT-END/pages/medicamentos/medicamento.html
+++ b/FRONT-END/pages/medicamentos/medicamento.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrar Medicamento</title>
-    <link rel="stylesheet" href="../../css/global.css" />
-    <link rel="stylesheet" href="../../css/medicamentos.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
+    <link rel="stylesheet" href="../../public/css/medicamentos.css" />
   </head>
   <body>
     <div class="sidebar">
