--- a/FRONT-END/index.html
+++ b/FRONT-END/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <a href="/FRONT-END/public/pages/login/login.html">Login</a>
-    <a href="/FRONT-END/public/pages/register/register.html">Registre-se</a>
+    <a href="./pages/login/login.html">Login</a>
+    <a href="./pages/register/register.html">Registre-se</a>
   </body>
 </html>
