--- a/FRONT-END/pages/pacientes/pacientes.html
+++ b/FRONT-END/pages/pacientes/pacientes.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gerenciamento de Perfis</title>
 
-    <link rel="stylesheet" href="../../css/global.css" />
-    <link rel="stylesheet" href="../../css/pacientes.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
+    <link rel="stylesheet" href="../../public/css/pacientes.css" />
   </head>
 
   <body>
