--- a/FRONT-END/pages/painel/painel.html
+++ b/FRONT-END/pages/painel/painel.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Painel de Controle</title>
-    <link rel="stylesheet" href="../../css/global.css" />
-    <link rel="stylesheet" href="../../css/painel.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
+    <link rel="stylesheet" href="../../public/css/painel.css" />
   </head>
   <body>
     <div class="sidebar">
