--- a/FRONT-END/pages/register/register.html
+++ b/FRONT-END/pages/register/register.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro - HealthCare App</title>
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="../../public/css/register.css" />
   </head>
+
   <body>
     <div class="container">
       <div class="card">
         <div class="logo">
-          <img src="logo.png" alt="HealthCare App" />
+          <img src="https://www.curitiba.pr.leg.br/atividade-parlamentar/comissoes-permanentes/logos-das-comissoes/saude.png/image" alt="HealthCare App" />
           <h2>HealthCare App</h2>
         </div>
 
@@ -23,41 +24,49 @@
           Preencha os campos abaixo para começar a gerenciar os cuidados.
         </p>
 
-        <form class="form">
+        <!-- FORMULÁRIO COM ID -->
+        <form id="formRegister" class="form">
+
           <label>Nome Completo</label>
-          <input type="text" placeholder="Digite seu nome completo" />
+          <input id="nome" type="text" placeholder="Digite seu nome completo" />
 
           <label>E-mail</label>
-          <input type="email" placeholder="seuemail@exemplo.com" />
+          <input id="email" type="email" placeholder="seuemail@exemplo.com" />
 
           <div class="row">
             <div class="col">
               <label>CPF</label>
-              <input type="text" placeholder="000.000.000-00" />
+              <input id="cpf" type="text" placeholder="000.000.000-00" />
             </div>
 
             <div class="col">
               <label>Telefone/WhatsApp</label>
-              <input type="text" placeholder="(00) 00000-0000" />
+              <input id="telefone" type="text" placeholder="(00) 00000-0000" />
             </div>
           </div>
 
           <label>Senha</label>
           <div class="password-field">
-            <input type="password" placeholder="Crie uma senha forte" />
+            <input id="senha" type="password" placeholder="Crie uma senha forte" />
             <span class="toggle">👁</span>
           </div>
 
           <label>Confirmar Senha</label>
-          <input type="password" placeholder="Confirme sua senha" />
+          <input id="confirmarSenha" type="password" placeholder="Confirme sua senha" />
 
           <button type="submit" class="btn">Criar Conta</button>
 
           <p class="login-link">
-            Já tem uma conta? <a href="/FRONT-END/public/pages/login/login.html">Faça login</a>
+            Já tem uma conta?
+            <a href="../login/login.html">Faça login</a>
           </p>
         </form>
       </div>
     </div>
+
+    <!-- Axios + JS -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/FRONT-END/public/js/api.js"></script>
+    <script src="register.js"></script>
   </body>
 </html>
