--- a/FRONT-END/pages/relatorio/relatorio.html
+++ b/FRONT-END/pages/relatorio/relatorio.html
@@ -6,10 +6,10 @@
     <title>Relatórios e Históricos</title>
 
     <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../../css/global.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
 
     <!-- CSS ESPECÍFICO -->
-    <link rel="stylesheet" href="../../css/relatorio.css" />
+    <link rel="stylesheet" href="../../public/css/relatorio.css" />
   </head>
 
   <body>
