--- a/FRONT-END/pages/relatorio/relatorio.html
+++ b/FRONT-END/pages/relatorio/relatorio.html
@@ -36,8 +36,7 @@
         <li><a href="../painel/painel.html">Painel</a></li>
         <li><a href="../pacientes/pacientes.html">Pacientes</a></li>
         <li>
-          <a href="../cadastrarMedicamento/cadastrarMedicamento.html"
-            >Medicamentos</a
+          <a href="../medicamentos/medicamentos.html">Medicamentos</a
           >
         </li>
         <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
