Correção de alguns bugs na criação e edição de medicamentos.

--- a/FRONT-END/pages/medicamentos/medicamentos.html
+++ b/FRONT-END/pages/medicamentos/medicamentos.html
@@ -22,9 +22,12 @@
     </div>
 
     <ul class="menu">
-      <li><a href="../painel/painel.html">Painel</a></li>
-      <li><a href="../pacientes/pacientes.html">Pacientes</a></li>
-      <li class="active"><a href="#">Medicamentos</a></li>
+        <li><a href="../painel/painel.html">Painel</a></li>
+        <li><a href="../pacientes/pacientes.html">Pacientes</a></li>
+        <li><a href="../medicamentos/medicamentos.html">Medicamentos</a></li>
+        <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
+        <li><a href="../relatorio/relatorio.html">Relatórios</a></li>
+      </ul>
     </ul>
 
     <div class="config-box">⚙️ Configurações</div>
